# sirs_import

./: .gitignore  LICENSE  README.en.md  README.md  README_PYPI.md  TODO  __main__.py  config_loader.py  config_sirs.example.toml  couchdb.py  helpers.py  pyproject.toml
.github/workflows/: python_CI.yml
sirs_import/: __main__.py  config_loader.py  couchdb.py  diag_des.py  json_builder.py  relocate.py
tests/: test_diagnose_mapping.py  test_photo_migration_integration.py  test_photo_migration_unit.py
