[project]
name = "sirs_import"
version = "0.9.0"
description = "Outil Python pour la validation et l'importation de désordres SIRS depuis fichiers GPKG et répertoires photos."
authors = [
    { name = "Ton Nom", email = "ton.email@domaine.fr" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "pandas",
    "numpy",
    "wcwidth",
    "shapely",
    "fiona",
    "tomli"
]

[project.urls]
Homepage = "https://github.com/USERNAME/sirs_import"
Documentation = "https://github.com/USERNAME/sirs_import"
Source = "https://github.com/USERNAME/sirs_import"
Issues = "https://github.com/USERNAME/sirs_import/issues"

[project.scripts]
sirs_import = "sirs_import.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sirs_import"]

